# railbot

./: pyproject.toml  test.py
BE/: .gitignore  pyproject.toml
BE/app/: alembic.ini  container.py  main.py
BE/app/api/: router.py
BE/app/api/v1/: chat.py  user.py
BE/app/core/: config.py  security.py
BE/app/core/security/: jwt.py  password.py
BE/app/db/: dep.py  session.py
BE/app/migrations/: env.py
BE/app/migrations/versions/: ac613a0bd9f7_create_initial_tables.py  bf86c01c58a2_create_users_table_attempt.py  d0048b33c62f_added_new_models.py
BE/app/model/: __init__.py  models.py
BE/app/repository/: auth_repository.py  user_repository.py
BE/app/schema/: user_schema.py
BE/app/service/auth/: auth_service.py
BE/app/service/chat/: chat_service.py
BE/app/service/llm/: llm_client.py  llm_service.py
BE/app/service/user/: user_service.py
BE/app/services/chat/: chat_service.py
BE/app/services/irctc/: irctc_client.py
BE/app/services/llm/: llm_client.py  llm_service.py
BE/app/services/redis/: state_manager.py
FE/: .gitignore  package-lock.json
FE/irctc-chatbot-frontend/: .env  package-lock.json  package.json  tailwind.config.js
FE/irctc-chatbot-frontend/src/: App.jsx  index.css  index.js
FE/irctc-chatbot-frontend/src/api/: auth.js  chat.js
FE/irctc-chatbot-frontend/src/components/Auth/: AuthForm.jsx
FE/irctc-chatbot-frontend/src/components/Chat/: ChatHeader.jsx  ChatInput.jsx  ChatInterface.jsx  ChatMessages.jsx  MessageBubble.jsx
FE/irctc-chatbot-frontend/src/contexts/: AuthContext.js
FE/irctc-chatbot-frontend/src/hooks/: useAuth.js  useChat.js
FE/irctc-chatbot-frontend/src/utils/: api.js  constants.js  storage.js
FE/my-project/: package-lock.json  vite.config.ts
FE/my-project/src/: App.tsx  index.css
FE/my-project/src/components/: ChatWindow.tsx
app/api/: router.py
app/api/v1/: chat.py  chat_router.py
app/core/: config.py
app/llm/: llm_client.py
app/models/: Intent.py  chat.py
app/services/: chat_service.py  intent_classifier.py  irctc_client.py  state_manager.py
app/services/chat/: chat_service.py
app/services/intents/: intent_classifier.py  param_extractor.py
app/services/irctc/: irctc_client.py
app/services/llm/: llm_client.py  llm_service.py
(+2 files in other folders)
