[tool.poetry]
name = "train-bot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.121.3"
uvicorn = "^0.38.0"
redis = "^7.1.0"
sqlalchemy = "^2.0.44"
psycopg2-binary = "^2.9.11"
httpx = "^0.28.1"
python-dotenv = "^1.2.1"
pydantic-settings = "^2.12.0"
dependency-injector = "^4.48.3"
alembic = "^1.17.2"
sqlmodel = "^0.0.27"
rich = "^14.2.0"
passlib = {extras = ["argon2"], version = "^1.7.4"}
email-validator = "^2.3.0"
asyncpg = "^0.31.0"
bcrypt = "^5.0.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}

[tool.poetry.group.dev.dependencies]
black = "^25.11.0"
isort = "^7.0.0"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"